tests/ui/span/regions-escape-loop-via-vec.stderr
error[E0597]: `z` does not live long enough
  --> $DIR/regions-escape-loop-via-vec.rs:7:17
   |
LL |         let mut z = x;
   |             ----- binding `z` declared here
LL |         _y.push(&mut z);
   |         --      ^^^^^^ borrowed value does not live long enough
   |         |
   |         borrow later used here
...
LL |     }
   |     - `z` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
